# HueEngine

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
HueEngine/: CMakeLists.txt
HueEngine/include/HueEngine/: Core.h  CoreMinimal.h  CurrentPlatform.h
HueEngine/include/HueEngine/Game/: Game.h  GameTimer.h  GraphicsWindow.h
HueEngine/include/HueEngine/Input/: InputKeysType.h  InputManager.h
HueEngine/include/HueEngine/Window/: AppWindow.h
HueEngine/source/HueEngine/Game/: Game.cpp  GameTimer.cpp  GraphicsWindow.cpp
HueEngine/source/HueEngine/Input/: InputManager.cpp
HueEngine/source/HueEngine/Window/: AppWindow.cpp
